# codedna

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  Progress.md  README.md  SKILL.md  build.rs
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
.opencode/skills/codedna/: SKILL.md
plugins/codedna/: README.md
plugins/codedna/.claude-plugin/: plugin.json
plugins/codedna/skills/codedna/: SKILL.md
scripts/: bootstrap-agent-files.sh  install-codex-skill.sh  install-opencode-skill.sh  package-codex-skill.sh
skill/codedna/: SKILL.md
skill/codedna/agents/: openai.yaml
skills/codedna-analyzer/: SKILL.md
skills/codedna-analyzer/examples/: local-analysis.md  remote-analysis.md
src/: analysis.rs  cli.rs  dead_code_detector.rs  dependency_graph.rs  framework_detector.rs  git_handler.rs  language_detector.rs  loc_counter.rs  main.rs  repo_map.rs  reporter.rs  scanner.rs
templates/: AGENTS.md  CLAUDE.md
