[package]
name = "codedna"
version = "0.1.0"
edition = "2021"
description = "Rust-powered CLI for codebase intelligence: stack detection, architecture hints, LOC breakdown, repo maps, and dead-code heuristics."
license = "MIT"
repository = "https://github.com/crafteraadarsh/codedna"
homepage = "https://github.com/crafteraadarsh/codedna"
documentation = "https://github.com/crafteraadarsh/codedna#readme"
readme = "README.md"
keywords = ["codebase", "analysis", "cli", "architecture", "loc"]
categories = ["command-line-utilities", "development-tools"]
authors = ["CodeDna Contributors"]
exclude = [
    ".github/",
    "target/",
    "skill/",
    "skills/",
    "scripts/",
    "templates/",
    "AGENTS.md",
    "CLAUDE.md",
    "GEMINI.md",
    ".cursorrules",
]

[[bin]]
name = "codedna"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
git2 = { version = "0.19", features = ["vendored-openssl"] }
tempfile = "3"
